# IKEA-CPP

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  TODO.md  br.sh  broken.ikea  build.sh  cmake.sh  code.ikea  generate_linux.sh  imported.ikea  premake5.lua  run.sh  test.ikea  ¨
IKEA/: .clang_complete
IKEA/src/: Callstack.h  File.h  Program.cpp  Program.h  main.cpp
IKEA/src/Instruction/: Instruction.h
src/: Callstack.h  File.h  Lineinfo.h  Program.cpp  Program.h  ProgramFiles.cpp  ProgramFiles.h  ProgramState.cpp  ProgramState.h  Str.h  ValueParser.h  main.cpp
src/Exception/: CircularImportException.h  Exception.h  FileImportException.h  InvalidArgumentCountException.h  InvalidSyntaxException.h  LIException.h  MemoryOutOfRangeException.h  NotANumberException.h  TopLevelReturnException.h  UndeclaredVariableException.h  UndefinedLocationException.h  UnknownInstructionException.h  UnnecesseryComparisonException.h
src/Instruction/: ADD.h  AND.h  CALL.h  ChangeONE.h  ConditionJMP.h  DEC.h  DynamicArgs.h  INC.h  Instruction.h  Instructions.h  JMP.h  JMPIF.h  MOV.h  NOT.h  OR.h  PRNT.h  PRNTM.h  PRNTV.h  RET.h  ROTATE.h  SUB.h  Segment.h  VAR.h  XOR.h
src/Memory/: Memory.cpp  Memory.h  Register.cpp  Register.h
tests/: fibonacci_forloop.ikea  fibonacci_function.ikea  fibonacci_recursion.ikea  fibonnaci_forloop.ikea  fibonnaci_function.ikea  fibonnaci_recursion.ikea  function.ikea  hello_world.ikea  if_elseif_else.ikea  prnt_formats.ikea  rec.cpp  variables.ikea  while_loop.ikea
